--- a/MadNorSane/MadNorSane/MadNorSane.csproj
+++ b/MadNorSane/MadNorSane/MadNorSane.csproj
@@ -62,7 +62,7 @@
   <ItemGroup>
     <Reference Include="Krypton, Version=1.0.0.0, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\Desktop\Krypton.dll</HintPath>
+      <HintPath>..\..\Krypton\obj\x86\Debug\Krypton.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Xna.Framework, Version=4.0.0.0, Culture=neutral, PublicKeyToken=842cf8be1de50553, processorArchitecture=x86" />
     <Reference Include="Microsoft.Xna.Framework.Game, Version=4.0.0.0, Culture=neutral, PublicKeyToken=842cf8be1de50553, processorArchitecture=x86" />
@@ -76,9 +76,15 @@
     <Reference Include="System.Net" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Characters\Archer.cs" />
+    <Compile Include="Characters\Knight.cs" />
+    <Compile Include="Characters\Mage.cs" />
+    <Compile Include="Characters\Player.cs" />
+    <Compile Include="Characters\Warrior.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
+    <Compile Include="Utilities\VS_Body.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Game.ico" />
