--- a/MadNorSane/MadNorSane/MadNorSane.csproj
+++ b/MadNorSane/MadNorSane/MadNorSane.csproj
@@ -79,11 +79,13 @@
     <Compile Include="Characters\Archer.cs" />
     <Compile Include="Characters\Knight.cs" />
     <Compile Include="Characters\Mage.cs" />
+    <Compile Include="Characters\MoveClass.cs" />
     <Compile Include="Characters\Player.cs" />
     <Compile Include="Characters\Warrior.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
+    <Compile Include="Utilities\Block.cs" />
     <Compile Include="Utilities\Camera.cs" />
     <Compile Include="Utilities\VS_Body.cs" />
     <Compile Include="ScreenManager\GameScreen.cs" />
