--- a/MadNorSane/MadNorSane/MadNorSane.csproj
+++ b/MadNorSane/MadNorSane/MadNorSane.csproj
@@ -109,7 +109,7 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\..\..\Desktop\Farseer Physics DebugView 3.5\DebugView XNA.csproj">
+    <ProjectReference Include="..\..\Farseer Physics DebugView 3.5\DebugView XNA.csproj">
       <Project>{fc7845fa-13fe-4ff8-822a-a577f3f59b00}</Project>
       <Name>DebugView XNA</Name>
     </ProjectReference>
