--- a/MadNorSane/MadNorSane/MadNorSane.csproj
+++ b/MadNorSane/MadNorSane/MadNorSane.csproj
@@ -91,6 +91,7 @@
     <Compile Include="Utilities\Block.cs" />
     <Compile Include="Utilities\Camera.cs" />
     <Compile Include="Utilities\Damage.cs" />
+    <Compile Include="Utilities\EnergyBall.cs" />
     <Compile Include="Utilities\Modifier.cs" />
     <Compile Include="Utilities\Modifiers.cs" />
     <Compile Include="Utilities\Skill.cs" />
