--- a/MadNorSane/MadNorSane/MadNorSane.csproj
+++ b/MadNorSane/MadNorSane/MadNorSane.csproj
@@ -60,10 +60,6 @@
     <XnaCompressContent>true</XnaCompressContent>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Krypton, Version=1.0.0.0, Culture=neutral, processorArchitecture=x86">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\Krypton\obj\x86\Debug\Krypton.dll</HintPath>
-    </Reference>
     <Reference Include="Microsoft.Xna.Framework, Version=4.0.0.0, Culture=neutral, PublicKeyToken=842cf8be1de50553, processorArchitecture=x86" />
     <Reference Include="Microsoft.Xna.Framework.Game, Version=4.0.0.0, Culture=neutral, PublicKeyToken=842cf8be1de50553, processorArchitecture=x86" />
     <Reference Include="Microsoft.Xna.Framework.Graphics, Version=4.0.0.0, Culture=neutral, PublicKeyToken=842cf8be1de50553, processorArchitecture=x86" />
@@ -86,6 +82,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
+    <Compile Include="Screens\VersusScreen.cs" />
     <Compile Include="Utilities\Animation.cs" />
     <Compile Include="Utilities\Arrow.cs" />
     <Compile Include="Utilities\Block.cs" />
@@ -94,6 +91,7 @@
     <Compile Include="Utilities\EnergyBall.cs" />
     <Compile Include="Utilities\Modifier.cs" />
     <Compile Include="Utilities\ModifierList.cs" />
+    <Compile Include="Utilities\Score.cs" />
     <Compile Include="Utilities\Skill.cs" />
     <Compile Include="Utilities\Stats.cs" />
     <Compile Include="Utilities\VS_Body.cs" />
@@ -124,6 +122,10 @@
     <ProjectReference Include="..\..\Farseer Physics Engine 3.5\Farseer Physics XNA.csproj">
       <Project>{0a850700-1abb-4288-a391-6726b90ebeb9}</Project>
       <Name>Farseer Physics XNA</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Krypton\Krypton.csproj">
+      <Project>{b1bfcb2a-c001-4dac-ba7d-b68bf28757f3}</Project>
+      <Name>Krypton</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\Krypton\Krypton.csproj">
       <Project>{b1bfcb2a-c001-4dac-ba7d-b68bf28757f3}</Project>
