--- a/MadNorSane/MadNorSane/MadNorSane.csproj
+++ b/MadNorSane/MadNorSane/MadNorSane.csproj
@@ -87,6 +87,7 @@
     <Compile Include="Utilities\Arrow.cs" />
     <Compile Include="Utilities\Block.cs" />
     <Compile Include="Utilities\Camera.cs" />
+    <Compile Include="Utilities\Crate.cs" />
     <Compile Include="Utilities\Damage.cs" />
     <Compile Include="Utilities\EnergyBall.cs" />
     <Compile Include="Utilities\Global.cs" />
